--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  sign_in_button: ^3.2.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
+  get_it: ^8.0.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
