--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.8.0
+  firebase_core: ^3.9.0
   cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.4
   google_sign_in: ^6.2.2
@@ -44,6 +44,10 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.2
   uuid: ^4.5.1
+  flutter_local_notifications: ^18.0.1
+  permission_handler: ^11.3.1
+  http: ^1.2.2
+  firebase_messaging: ^15.1.6
 
 dev_dependencies:
   flutter_test:
